[stack] PostgreSQL raised 9.3 -> 10